--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://www.dreamdo.dev" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -224,7 +224,7 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://codalyst.live" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -243,7 +243,6 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -262,7 +261,6 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -281,7 +279,7 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://simon-says-rose.vercel.app" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -298,7 +296,6 @@
               <a href="https://github.com/Abhish3k-Yadav" target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
