--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="https://www.dreamdo.dev" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://www.dreamdo.dev" target="_blank"
+                ><i class="fas fa-globe"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -224,7 +226,9 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="https://codalyst.live" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://codalyst.live" target="_blank"
+                ><i class="fas fa-globe"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -279,7 +283,9 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="https://simon-says-rose.vercel.app" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://simon-says-rose.vercel.app" target="_blank"
+                ><i class="fas fa-globe"></i
+              ></a>
             </div>
           </div>
         </div>
